# byte-me

./: .gitignore  .prettierignore  .prettierrc  Justfile  README.md  app.go  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  probe.go  renovate.json  tsconfig.json  vite.config.ts  wails.json
.data/: seed.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml  security-audit.yml
frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/lib/: format.test.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
scripts/: generate-types.ts
src/: App.tsx  bindings.ts  global.css  main.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: ff.rs  lib.rs  main.rs  media.rs  models.rs  strings.rs
src-tauri/tests/: strings.rs
src/components/: drop-overlay.tsx  graph.tsx
src/features/drop/: drop-overlay.tsx
src/features/graph/: graph.tsx
src/hooks/: useDragDropPaths.ts
src/lib/: format.test.ts  format.ts
src/types/: graph.ts
